--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,17 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Tech Blog - </title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <title>The Tech Blog</title>
+    <link rel="icon" type="image/x-icon" href="../../assets/favicon.png" />
     <script src="https://kit.fontawesome.com/ea187b7c6b.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet"
-        type="text/css" />
     <link
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
-        rel="stylesheet" type="text/css" />
-    <link href="css/styles.css" rel="stylesheet" />
+        href="https://fonts.googleapis.com/css2?family=Comforter&family=Comforter+Brush&family=Nunito:wght@200&family=Outfit:wght@100&family=Righteous&display=swap"
+        rel="stylesheet">
+    <link href="../../public/css/style.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -43,7 +41,8 @@
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <div class="site-heading">
-                        <h1 class="text-center">The Tech Blog</h1>
+                        <h1 class="text-center" style="font-family: 'Comforter','Nunito','Outfit';">The Tech Blog
+                        </h1>
                     </div>
                 </div>
             </div>
@@ -56,7 +55,9 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/scripts.js"></script>
+    {{#if logged_in}}
+    <script src="../../public/js/logout.js"></script>
+    {{/if}}
 </body>
 <footer class="border-top">
     <div class="container px-4 px-lg-5">
