--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,6 +1,5 @@
 <div class="text-center">
-    <p>{{{get_emoji}}}</p>
     <h2>{{name}}</h2>
     <p>Posted by {{user.name}} on {{format_date date_created}}</p>
-    <p>{{description}}</p>
+    <p>{{content}}</p>
 </div>
