--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -6,16 +6,16 @@
 
 <div class="row mt-4">
     <div class="col-md-6">
-        <h3>Create a New Blog:</h3>
+        <h3>Create New Post:</h3>
 
         <form class="form new-blog-form">
             <div class="form-group">
-                <label for="blog-title">Blog Title:</label>
-                <input class="form-input" type="text" id="blog-title" name="blog-title" />
+                <label for="blog-title">Title:</label>
+                <input class="form-input" type="text" id="title" name="title" />
             </div>
             <div class="form-group">
-                <label for="blog-desc">Blog:</label>
-                <textarea class="form-input" id="blog-desc" name="blog-desc"></textarea>
+                <label for="blog-content">Content:</label>
+                <textarea class="form-input" id="content" name="content"></textarea>
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-primary">Create</button>
@@ -25,12 +25,12 @@
 
     {{#if blog.length}}
     <div class="col-md-6 blog-list">
-        <h3>Your Blogs:</h3>
+        <h3>Your Posts:</h3>
 
         {{#each blogs as |blog|}}
         <div class="row mb-2">
             <div class="col-md-8">
-                <h4><a href="/project/{{blog.id}}">{{blog.title}}</a></h4>
+                <h4><a href="/blog/{{blog.id}}">{{blog.title}}</a></h4>
             </div>
             <div class="col-md-4">
                 <button class="btn btn-sm btn-danger" data-id="{{blog.id}}">DELETE</button>
@@ -41,4 +41,4 @@
     {{/if}}
 </div>
 
-<script src="./js/user.js"></script>
+<script src="./js/dashboard.js"></script>
