--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,5 +1,5 @@
 <div class="text-center">
-    <h2>{{name}}</h2>
+    <h2>{{title}}</h2>
     <p>Posted by {{user.name}} on {{format_date date_created}}</p>
     <p>{{content}}</p>
 </div>
