--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -10,11 +10,11 @@
 
         <form class="form new-blog-form">
             <div class="form-group">
-                <label for="blog-title">Title:</label>
+                <label for="title">Title:</label>
                 <input class="form-input" type="text" id="title" name="title" />
             </div>
             <div class="form-group">
-                <label for="blog-content">Content:</label>
+                <label for="content">Content:</label>
                 <textarea class="form-input" id="content" name="content"></textarea>
             </div>
             <div class="form-group">
