--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,5 +1,10 @@
-<div class="text-center">
-    <h2>{{title}}</h2>
-    <p>Posted by {{user.name}} on {{format_date date_created}}</p>
-    <p>{{content}}</p>
+<div>
+    <div class="text-center blog-container">
+        <h2>{{title}}</h2>
+        <p>Posted by {{user.name}} on {{format_date date_created}}</p>
+        <div class="text-left">{{content}}</div>
+    </div>
+    <div class="">
+
+    </div>
 </div>
