--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,12 +1,18 @@
 {{#each blogs as |blog|}}
 <div class="col-md-10 col-lg-8 col-xl-7">
-    <div class="post-preview">
+    <div class="blog-preview">
         <a href="/blog/{{blog.id}}">
-            <h2 class="post-title">{{title}}</h2>
+            <h2 class="title">{{title}}</h2>
         </a>
-        <p class="post-meta">
-            Posted by {{name}} on {{date}}
+        <p class="post_meta">
+            Posted by {{user.name}} on {{format_date date_created}}
         </p>
+        <div>
+            {{content}}
+        </div>
+        <a href="/blog/{{blog.id}}" class="text-right">{{comment.length}}comments</a></p>
+        </a>
+
     </div>
     <hr class="my-4" />
 </div>
