--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,6 +28,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto py-4 py-lg-0">
+                    <li class="nav-item">
+                        <a href="/" class="nav-link px-lg-3 py-3 py-lg-4">Home</a>
+                    </li>
                     {{#if logged_in}}
                     <li class="nav-item">
                         <a href="/dashboard" class="nav-link px-lg-3 py-3 py-lg-4">Dashboard</a>
