--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -5,6 +5,29 @@
         <div class="text-left">{{content}}</div>
     </div>
     <div class="comments">
+        <div class="form-group align-items-center">
+            <form action="">
+                <div class="form row">
+                    <div class="form-group col-md-6">
+                        <label for="name_comment" class="col-form-label">Name:</label>
+                        <input class="form-input" type="text" id="name_comment" />
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="email_comment" class="col-form-label">Email:</label>
+                        <input class="form-input" type="text" id="email_comment" />
+                    </div>
+
+                </div>
+
+                <div class="form-group">
+                    <label for="comment-input" class="col-form-label">Comment:</label>
+                    <textarea class="form-control" id="comment-input" rows="5"></textarea>
+                </div>
+                <div>
+                    <button class="btn btn-primary mb-2" type="submit">Comment</button>
+                </div>
+            </form>
+        </div>
         {{#each blogs as |blog|}}
         <section class="comment_container">
             <div class="comment_info">
