--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>The Tech Blog</title>
-    <link rel="icon" type="image/x-icon" href="../../assets/favicon.png" />
+    <link rel="icon" href="../../assets/favicon.png">
     <script src="https://kit.fontawesome.com/ea187b7c6b.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -68,7 +68,7 @@
     <script src="../../public/js/logout.js"></script>
     {{/if}}
 </body>
-<footer class="border-top">
+<footer class="footer align-items-center">
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
