--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,18 +1,18 @@
-<div class="row">
+<div class="row container">
     <div class="col-md-6">
         <h2>Login</h2>
 
-        <form class="form login-form">
+        <form class="form login-form text-right">
             <div class="form-group">
-                <label for="email-login">email:</label>
+                <label for="email-login" class="col-form-label">email:</label>
                 <input class="form-input" type="text" id="email-login" />
             </div>
             <div class="form-group">
-                <label for="password-login">password:</label>
+                <label for="password-login" class="col-form-label">password:</label>
                 <input class="form-input" type="password" id="password-login" />
             </div>
             <div class="form-group">
-                <button class="btn btn-primary" type="submit">Log In</button>
+                <button class="btn btn-primary mb-2" type="submit">Log In</button>
             </div>
         </form>
     </div>
@@ -21,19 +21,19 @@
 
         <form class="form signup-form">
             <div class="form-group">
-                <label for="name-signup">name:</label>
+                <label for="name-signup" class="col-form-label">name:</label>
                 <input class="form-input" type="text" id="name-signup" />
             </div>
             <div class="form-group">
-                <label for="email-signup">email:</label>
+                <label for="email-signup" class="col-form-label">email:</label>
                 <input class="form-input" type="text" id="email-signup" />
             </div>
             <div class="form-group">
-                <label for="password-signup">password:</label>
+                <label for="password-signup" class="col-form-label">password:</label>
                 <input class="form-input" type="password" id="password-signup" />
             </div>
             <div class="form-group">
-                <button class="btn btn-primary" type="submit">Sign Up</button>
+                <button class="btn btn-primary mb-2" type="submit">Sign Up</button>
             </div>
         </form>
     </div>
