--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -6,7 +6,7 @@
     </div>
     <div class="comments">
         <div class="form-group align-items-center">
-            <form action="">
+            <form class="comment-form">
                 <div class="form row">
                     <div class="form-group col-md-6">
                         <label for="name_comment" class="col-form-label">Name:</label>
@@ -28,16 +28,37 @@
                 </div>
             </form>
         </div>
-        {{#each blogs as |blog|}}
-        <section class="comment_container">
-            <div class="comment_info">
-                {{user.username}} on {{format_date date_commented}}
-            </div>
-            <div class="comment">
-                {{comment}}
-            </div>
-        </section>
-        {{/each}}
-    </div>
 
-</div>
+        <div class="comment-list">
+            {{#if comments.length}}
+            {{#each comments as |comment|}}
+            <hr class="my-4" />
+            <section class="comment_container row">
+                <div class="col-md-11">
+                    <div class="comment_info">
+                        {{user.name}} on {{format_date date_commented}}
+                    </div>
+                    <div class="comment">
+                        {{comment}}
+                    </div>
+
+                </div>
+                <div class="col-md-1">
+                    <button class="btn btn-sm btn-danger" data-id="{{blog.id}}">DELETE</button>
+                </div>
+            </section>
+            {{/each}}
+            {{/if}}
+            {{#else}}
+            <div>
+                <hr class="my-4" />
+                <h3>No Comment yet....</h3>
+            </div>
+            {{/else}}
+
+        </div>
+
+
+
+
+    </div>
