--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -15,7 +15,7 @@
             </div>
             <div class="form-group">
                 <label for="content">Content:</label>
-                <textarea class="form-input" id="content" name="content"></textarea>
+                <textarea class="form-input" id="content" name="content" rows="10"></textarea>
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-primary">Create</button>
@@ -26,8 +26,9 @@
 
     <div class="col-md-6 blog-list">
         <h3>Your Posts:</h3>
-        {{#if blog.length}}
+        {{#if blogs.length}}
         {{#each blogs as |blog|}}
+        <hr class="my-4" />
         <div class="row mb-2">
             <div class="col-md-8">
                 <h4><a href="/blog/{{blog.id}}">{{blog.title}}</a></h4>
