--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -31,7 +31,7 @@
         <hr class="my-4" />
         <div class="row mb-2">
             <div class="col-md-8">
-                <h4><a href="/blog/{{blog.id}}">{{blog.title}}</a></h4>
+                <h4><a href="/blog/edit/{{blog.id}}">{{blog.title}}</a></h4>
             </div>
             <div class="col-md-4">
                 <button class="btn btn-sm btn-danger" data-id="{{blog.id}}">DELETE</button>
