updating edit functions still in progress

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -11,9 +11,8 @@
         <div>
             {{content}}
         </div>
-        <a href="/blog/{{blog.id}}" class="text-right">{{comment.length}}comments</a></p>
+        <a href="/blog/{{blog.id}}" class="text-right">{{blog.comment.length}}comments</a></p>
         </a>
-
     </div>
 
 </div>
