--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -4,11 +4,11 @@
     <form class="form update-blog-form">
         <div class="form-group">
             <label for="title">Title:</label>
-            <input class="form-input" type="text" id="title" name="title" />
+            <input class="form-input" type="text" id="title" name="title" value="{{title}}" />
         </div>
         <div class="form-group">
             <label for="content">Content:</label>
-            <textarea class="form-input" id="content" name="content" rows="10"></textarea>
+            <textarea class="form-input" id="content" name="content" rows="10" value="{{content}}"></textarea>
         </div>
         <div class="form-group">
             <button type="submit" class="btn btn-primary">Update</button>
