--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>The Tech Blog</title>
-    <link rel="icon" href="../public/favicon.png">
+    <link rel="icon" href="./favicon.png">
     <script src="https://kit.fontawesome.com/ea187b7c6b.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -45,7 +45,7 @@
             </div>
         </div>
     </nav>
-    <header class="jumbotron jumbotron-fluid" style="background-image: url('assets/img/png')">
+    <header class="jumbotron jumbotron-fluidrs">
         <div class="container position-relative px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
