--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -8,7 +8,8 @@
         </div>
         <div class="form-group">
             <label for="content">Content:</label>
-            <textarea class="form-input" id="content" name="content" rows="10" value="{{content}}"></textarea>
+            <textarea class="form-input" id="content" name="content" type="text" rows="10"
+                value="">{{content}}</textarea>
         </div>
         <div class="form-group">
             <button type="submit" class="btn btn-primary">Update</button>
