updating commentig fuction

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -11,7 +11,7 @@
         <div>
             {{content}}
         </div>
-        <a href="/blog/{{blog.id}}" class="text-right">{{blog.comment.length}}comments</a></p>
+        <a href="/blog/{{blog.id}}" class="text-right">{{blog.comments.length}}comments</a></p>
         </a>
     </div>
 
