--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -4,20 +4,18 @@
         <p>Posted by {{user.name}} on {{format_date date_created}}</p>
         <div class="text-left">{{content}}</div>
     </div>
+
     <div class="comments">
+        {{#if logged_in }}
         <div class="form-group align-items-center">
             <form class="comment-form">
-                <div class="form row">
+
+                {{!-- <div class="form row">
                     <div class="form-group col-md-6">
                         <label for="name_comment" class="col-form-label">Name:</label>
                         <input class="form-input" type="text" id="name_comment" />
                     </div>
-                    <div class="form-group col-md-6">
-                        <label for="email_comment" class="col-form-label">Email:</label>
-                        <input class="form-input" type="text" id="email_comment" />
-                    </div>
-
-                </div>
+                </div> --}}
 
                 <div class="form-group">
                     <label for="comment-input" class="col-form-label">Comment:</label>
@@ -28,8 +26,11 @@
                 </div>
             </form>
         </div>
+        {{/if}}
 
         <div class="comment-list">
+            <hr class="my-4" />
+            <p>To comment, please sign in or log in.</p>
             {{#if comments.length}}
             {{#each comments as |comment|}}
             <hr class="my-4" />
@@ -44,14 +45,12 @@
                 </div>
             </section>
             {{/each}}
-            {{/if}}
-            {{#else}}
+            {{else}}
             <div>
                 <hr class="my-4" />
-                <h3>No Comment yet....</h3>
+                <p>No Comment yet....</p>
             </div>
-            {{/else}}
-
+            {{/if}}
         </div>
 
 
