--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -35,7 +35,7 @@
             {{#each comments as |comment|}}
             <hr class="my-4" />
             <section class="comment_container">
-                <div class="">
+                <div class="col-md-11">
                     <div class="comment_info">
                         {{user.name}} on {{format_date date_commented}}
                     </div>
@@ -43,6 +43,12 @@
                         {{comment.comment}}
                     </div>
                 </div>
+                {{#if logged_in}}
+                <div class="col-md-2">
+                    <button class="btn btn-sm btn-primary" data-id="{{comment.id}}">UPDATE</button>
+                    <button class="btn btn-sm btn-danger" data-id="{{comment.id}}">DELETE</button>
+                </div>
+                {{/if}}
             </section>
             {{/each}}
             {{else}}
