creating update comment function

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -11,7 +11,8 @@
         <div>
             {{content}}
         </div>
-        <a href="/blog/{{blog.id}}" class="text-center">{{blog.comments.length}} comments</a></p>
+        <a href="/blog/{{blog.id}}" class="text-center"><button class="btn btn-primary">{{blog.comments.length}}
+                comments</button></a></p>
         </a>
     </div>
 
