--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,8 +35,8 @@
                     <li class="nav-item">
                         <a href="/dashboard" class="nav-link px-lg-3 py-3 py-lg-4">Dashboard</a>
                     </li>
-                    <li class="nav-item"><button class="nav-link px-lg-3 py-3 py-lg-4 no-button"
-                            id="logout">Logout</button></li>
+                    <li class="nav-item nav-link px-lg-3 py-3 py-lg-4 btn" id="logout">Logout</>
+                    </li>
                     {{else}}
                     <li class="nav-item"> <a class="nav-link px-lg-3 py-3 py-lg-4" href="/login">Log In</a></li>
                     {{/if}}
