--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -9,14 +9,6 @@
         {{#if logged_in }}
         <div class="form-group align-items-center">
             <form class="comment-form">
-
-                {{!-- <div class="form row">
-                    <div class="form-group col-md-6">
-                        <label for="name_comment" class="col-form-label">Name:</label>
-                        <input class="form-input" type="text" id="name_comment" />
-                    </div>
-                </div> --}}
-
                 <div class="form-group">
                     <label for="comment-input" class="col-form-label">Comment:</label>
                     <textarea class="form-control" id="comment-input" rows="5"></textarea>
@@ -34,8 +26,8 @@
             {{#if comments.length}}
             {{#each comments as |comment|}}
             <hr class="my-4" />
-            <section class="comment_container">
-                <div class="col-md-11">
+            <section class="comment_container row">
+                <div class="col-md-10">
                     <div class="comment_info">
                         {{user.name}} on {{format_date date_commented}}
                     </div>
@@ -43,11 +35,14 @@
                         {{comment.comment}}
                     </div>
                 </div>
-                {{#if logged_in}}
+                {{#if ../logged_in}}
+                {{#if_eq ../user_id comment.user_id}}
                 <div class="col-md-2">
-                    <button class="btn btn-sm btn-primary" data-id="{{comment.id}}">UPDATE</button>
-                    <button class="btn btn-sm btn-danger" data-id="{{comment.id}}">DELETE</button>
+                    <a href="/comments/{{comment.id}}/edit"><button class="btn btn-sm btn-primary editBtn"
+                            data-id="{{comment.id}}">EDIT</button></a>
+                    <button class="btn btn-sm btn-danger deleteBtn" data-id="{{comment.id}}">DELETE</button>
                 </div>
+                {{/if_eq}}
                 {{/if}}
             </section>
             {{/each}}
