--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -12,7 +12,7 @@
                 value="">{{content}}</textarea>
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-primary">Update</button>
+            <button type="submit" class="btn btn-primary" data-id="{{comment.id}}">Update</button>
         </div>
     </form>
 </div>
