connect to jawsdb

--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -11,7 +11,7 @@
             <form class="comment-form">
                 <div class="form-group">
                     <label for="comment-input" class="col-form-label">Comment:</label>
-                    <textarea class="form-control" id="comment-input" rows="5"></textarea>
+                    <textarea class="form-control form-control-lg" id="comment-input" rows="5"></textarea>
                 </div>
                 <div>
                     <button class="btn btn-primary mb-2" type="submit">Comment</button>
