--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,14 +8,14 @@
     <div class="col-md-6">
         <h3>Create New Post:</h3>
 
-        <form class="form new-blog-form">
+        <form class="new-blog-form">
             <div class="form-group">
                 <label for="title">Title:</label>
-                <input class="form-input" type="text" id="title" name="title" />
+                <input class="form-input form-control" type="text" id="title" name="title" />
             </div>
             <div class="form-group">
                 <label for="content">Content:</label>
-                <textarea class="form-input" id="content" name="content" rows="10"></textarea>
+                <textarea class="form-input form-control" type="text" id="content" name="content" rows="10"></textarea>
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-primary">Create</button>
