heroku deployed link

--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -14,7 +14,7 @@
                     <textarea class="form-control form-control-lg" id="comment-input" rows="5"></textarea>
                 </div>
                 <div>
-                    <button class="btn btn-primary mb-2" type="submit">Comment</button>
+                    <button class="btn btn-primary mt-2" type="submit">Comment</button>
                 </div>
             </form>
         </div>
