--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -11,7 +11,7 @@
         <div>
             {{content}}
         </div>
-        <a href="/blog/{{blog.id}}" class="text-center"><button class="btn btn-primary">{{blog.comments.length}}
+        <a href="/blog/{{blog.id}}"><button class="btn btn-primary mt-2 float-right">{{blog.comments.length}}
                 comments</button></a></p>
         </a>
     </div>
