--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -18,7 +18,7 @@
                 <textarea class="form-input form-control" type="text" id="content" name="content" rows="10"></textarea>
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-primary">Create</button>
+                <button type="submit" class="btn btn-primary mt-2">Create</button>
             </div>
         </form>
     </div>
