--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -45,7 +45,7 @@
             </div>
         </div>
     </nav>
-    <header class="jumbotron jumbotron-fluidrs">
+    <header class="jumbotron jumbotron-fluid">
         <div class="container position-relative px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
