--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -4,15 +4,15 @@
     <form class="form update-blog-form">
         <div class="form-group">
             <label for="title">Title:</label>
-            <input class="form-input" type="text" id="title" name="title" value="{{title}}" />
+            <input class="form-input form-control" type="text" id="title" name="title" value="{{title}}" />
         </div>
         <div class="form-group">
             <label for="content">Content:</label>
-            <textarea class="form-input" id="content" name="content" type="text" rows="10"
+            <textarea class="form-input form-control" id="content" name="content" type="text" rows="10"
                 value="">{{content}}</textarea>
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-primary" data-id="{{comment.id}}">Update</button>
+            <button type="submit" class="btn btn-primary mt-2" data-id="{{comment.id}}">Update</button>
         </div>
     </form>
 </div>
