--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,4 +1,4 @@
-<div>
+<div class="container col-md-10">
     <div class="text-center blog-container">
         <h2>{{title}}</h2>
         <p>Posted by {{user.name}} on {{format_date date_created}}</p>
@@ -13,7 +13,7 @@
                     <label for="comment-input" class="col-form-label">Comment:</label>
                     <textarea class="form-control form-control-lg" id="comment-input" rows="5"></textarea>
                 </div>
-                <div>
+                <div class="text-center">
                     <button class="btn btn-primary mt-2" type="submit">Comment</button>
                 </div>
             </form>
