--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
     <link href="/css/style.css" rel="stylesheet" />
 </head>
 
-<body>
+<body class="mt-5 mb-5">
     <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
         <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="index.html"></a>
@@ -35,8 +35,7 @@
                     <li class="nav-item">
                         <a href="/dashboard" class="nav-link px-lg-3 py-3 py-lg-4">Dashboard</a>
                     </li>
-                    <li class="nav-item nav-link px-lg-3 py-3 py-lg-4 btn" id="logout">Logout</>
-                    </li>
+                    <li class="nav-item nav-link px-lg-3 py-3 py-lg-4 btn" id="logout">Logout</li>
                     {{else}}
                     <li class="nav-item"> <a class="nav-link px-lg-3 py-3 py-lg-4" href="/login">Log In</a></li>
                     {{/if}}
@@ -45,7 +44,7 @@
             </div>
         </div>
     </nav>
-    <header class="jumbotron jumbotron-fluid">
+    <header class="jumbotron jumbotron-fluid pb-4">
         <div class="container position-relative px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
@@ -68,7 +67,7 @@
     <script src="/js/logout.js"></script>
     {{/if}}
 </body>
-<footer class="footer align-items-center">
+<footer class="page-footer mt-5 align-items-center">
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
