--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <div class="row container">
     <div class="col-md-6">
-        <h2>Login</h2>
+        <h3 class="text-center">Log in</h3>
 
         <form class="form login-form text-right">
             <div class="form-group">
@@ -11,13 +11,13 @@
                 <label for="password-login" class="col-form-label">password:</label>
                 <input class="form-input form-control" type="password" id="password-login" />
             </div>
-            <div class="form-group">
+            <div class="form-group text-center">
                 <button class="btn btn-primary mt-2" type="submit">Log In</button>
             </div>
         </form>
     </div>
     <div class="col-md-6">
-        <h2>Sign up</h2>
+        <h3 class="text-center">Sign up</h3>
 
         <form class="form signup-form">
             <div class="form-group">
@@ -32,7 +32,7 @@
                 <label for="password-signup" class="col-form-label">password:</label>
                 <input class="form-input form-control" type="password" id="password-signup" />
             </div>
-            <div class="form-group">
+            <div class="form-group text-center">
                 <button class="btn btn-primary mt-2" type="submit">Sign Up</button>
             </div>
         </form>
