--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -50,7 +50,9 @@
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <div class="site-heading">
-                        <h1 class="text-center light-color" style="font-family: 'Comforter','Nunito','Outfit';">The Tech
+                        <h1 class="text-center dark-color" style="font-family: 'Comforter','Nunito','Outfit';"
+                            font-size="8rem">The
+                            Tech
                             Blog
                         </h1>
                     </div>
