--- a/views/updateComment.handlebars
+++ b/views/updateComment.handlebars
@@ -13,7 +13,7 @@
                     <textarea class="form-control" id="comment-input" rows="5">{{comment}}</textarea>
                 </div>
                 <div>
-                    <button class="btn btn-primary mb-2 updateBtn" type="submit"
+                    <button class="btn btn-primary mt-4 mb-2 updateBtn" type="submit"
                         data-id="{{comment.id}}">UPDATE</button>
                 </div>
             </form>
